infra/K8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image: nobioma1/tickets
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-service
spec:
  selector:
    app: tickets
  ports:
    - name: tickets
      port: 5001
      targetPort: 5001
