infra/K8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: ticketing.k8s.dev
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-service
              servicePort: 5000
          - path: /api/tickets/?(.*)
            backend:
              serviceName: tickets-service
              servicePort: 5001
          - path: /?(.*)
            backend:
              serviceName: client-service
              servicePort: 3000
